[tool.poetry]
name = "postgres-homeworks-dz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "postgres_homeworks_dz"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
